--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#121212">
+    <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Session Messenger online</title>
+    <meta name="description" content="Session Messenger online" />
+    <meta property="og:title" content="Session Messenger online" />
+    <meta property="og:description" content="Session Messenger online" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Session Web" />
+    <meta property="og:author" content="by hloth.dev" />
+    <meta property="og:url" content="https://session-web.pages.dev/" />
+    <meta property="og:image" content="https://session-web.pages.dev/ogp.png" />
   </head>
   <body>
     <div id="root"></div>
